Headers contrast fix
Accordint to feedback
https://github.com/AntennaPod/antennapod.github.io/pull/61#issuecomment-803884119

--- a/_sass/_dark.scss
+++ b/_sass/_dark.scss
@@ -9,6 +9,8 @@
     }
 
     .content h1,
+    .content h2,
+    .content h3,
     .content h4 {
         color: #ddd;
     }
